--- a/src/sass/pages/_homepage.scss
+++ b/src/sass/pages/_homepage.scss
@@ -16,6 +16,10 @@ h1 {
 /* =============================================== */
 
 body  {
+    #root {  
+        @include max-1200px { margin: 0 20px; }
+        @include min-1200px { margin: 0 35px; }
+    }
     // main contains homepage view
     .homepage-content {
         @include max-1200px { margin: 0 20px; }
