--- a/src/sass/layouts/_modal.scss
+++ b/src/sass/layouts/_modal.scss
@@ -22,12 +22,16 @@
             
             .cancelModalBtn { 
                 position: absolute; z-index: 7;
+                @include icon-base;
                 @include max-600px {height:30px;width:30px; right:30px;top:25px;}
                 @include min-600px {height:50px;width:50px;right:50px;top:30px;}
-                i .fa { 
-                    @include icon-base; color: $white;
-                    @include max-600px {font-size:2em !important;}
-                    @include min-600px {font-size:4em !important;}}
+                .fa, .fas { 
+                    color: $white;
+                    font-weight: 900;
+                    font-size: 2em;
+                    // @include max-600px {font-size:2em !important;}
+                    // @include min-600px {font-size:4em !important;}
+                }
             }
             h1 { 
                 @include max-600px {padding: 25px 0; font-size: 36px;}  //------- to review (mixins..)
