--- a/src/sass/layouts/_lightbox.scss
+++ b/src/sass/layouts/_lightbox.scss
@@ -8,96 +8,109 @@
     background: rgba(196, 196, 196, 0.8);
     z-index:5;
 
-    .lightbox {
+    .lightbox-inner-wrapper {
         position: relative;
-        border:5px solid red;
-        width:800px;height:600px; 
-        margin:auto;
-        .closeLightboxBtn { 
-            position: absolute; z-index: 9;
-            @include max-600px {height:30px;width:30px; right:-50px;top:0;}
-            @include min-600px {height:50px;width:50px;right:-70px;top:0;}
-            .fa.fa-times { 
-                @include icon-base;  color: $red-main !important;
-                @include max-600px {font-size:2em !important;}
-                @include min-600px {font-size:4em !important;}
-            }
-        } 
-        ul {margin: 0;padding: 0; }
-        
-        .with-slidenav { padding-bottom: 3em;} // leave space at bottom for aria infos
-        .active {position: relative;}
+        border: 5px solid yellow;
+        height: 900px;  
+        margin: auto;
 
-        // first ul : images display 
-        // .slide / = li elements
-        // ---------------------------------------
-        .lightbox-images { // ul
-            .slide { // li
-                width:100%;height: 100%; background-size: cover; position: absolute;
-                video { height: 100%; max-width: 100%; }
-            }
-        }
-        &.active {
-            .slide {
-            top: 0;
-            display:block !important;
-            transition: left .6s ease-out;
-            }  
-            .prev.slide {
-                left: -100%;
-                visibility: hidden;
-            }
-            .current.slide {
-                z-index: 6; left: 0;
-                h5 {  // image title below lightbox
-                    color: $red-main;
-                    z-index: 7;
-                    position: absolute;
-                    bottom: -100px;
-                    width: 100%;
-                    height: 50px;
-                    font-size:2em;
-                }
-            }
-            .next.slide {
-                left: 100%; 
-                visibility: hidden;
-            }
-        }
-        &.active:not(.current).slide h5 {display: none;} // if pic not current, hide title bottom
-    }
-}
-
-        // = second ul
-        // ---------------------------------------
-        .controls { 
-            width:120%; height:45%; // of lightbox
-            position: absolute;
-            z-index: 7;
-            top: 45%; right:-10%;  
-            @include flex(row, nowrap);
-            justify-content: space-between;
-            button { 
-                font-size:1em;
-                background-color: transparent;
-                .fa.fa-chevron-left,
-                .fa.fa-chevron-right { 
+        .lightbox {
+            position: relative;
+            border:5px solid red;
+            width:800px;height:600px; 
+            .closeLightboxBtn { 
+                position: absolute; z-index: 9;
+                @include max-600px {height:30px;width:30px; right:-50px;top:0;}
+                @include min-600px {height:50px;width:50px;right:-70px;top:0;}
+                .fa.fa-times { 
                     @include icon-base;  color: $red-main !important;
                     @include max-600px {font-size:2em !important;}
-                    @include min-600px {font-size:4em !important;}}
-            }
-            .btn-prev { left: -5px; }
-            .btn-next { right: 5px; }
-        }
+                    @include min-600px {font-size:4em !important;}
+                }
+            } 
+            ul {margin: 0;padding: 0; }
+            
+            .with-slidenav { padding-bottom: 3em;} // leave space at bottom for aria infos
+            .active {position: relative;}
 
-        // ---------------------------------------
-        // third ul for accessibility additional infos/commands : 
-        // pictures indexes to navigate manually
-        // and check current active pic 
-        .slidenav { 
-            width:100%;position: absolute; 
-            bottom:0;z-index: 8;
-            @include flex(row, nowrap); 
-            justify-content: space-between;
-            button.current { background-color: rgba(0, 187, 255, 0.995);}         
+            // first ul : images display 
+            // .slide / = li elements
+            // ---------------------------------------
+            .lightbox-images { // ul
+                .slide { // li
+                    width:100%;height: 100%;
+                    background-size: cover; background-position: center;
+                    position: absolute;
+                    video { background-color: black; height: 100%; max-width: 100%; }
+                }
+            }
+            &.active {
+                .slide {
+                top: 0;
+                display:block !important;
+                transition: left .6s ease-out;
+                }  
+                .prev.slide {
+                    left: -100%;
+                    visibility: hidden;
+                }
+                .current.slide {
+                    z-index: 6; left: 0;
+                    h5 {  // image title below lightbox
+                        color: $red-main;
+                        z-index: 7;
+                        position: absolute;
+                        bottom: -120px;
+                        width: 100%;
+                        height: 50px;
+                        font-size:2em;
+                    }
+                }
+                .next.slide {
+                    left: 100%; 
+                    visibility: hidden;
+                }
+            }
+            &.active:not(.current).slide h5 {display: none;} // if pic not current, hide title bottom
         }
+    }    
+    // = second ul
+    // ---------------------------------------
+    .controls { 
+        width:120%; height:45%; // of lightbox
+        position: absolute;
+        z-index: 7;
+        top: 45%; right:-10%;  
+        @include flex(row, nowrap);
+        justify-content: space-between;
+        button { 
+            font-size:1em;
+            background-color: transparent;
+            .fa.fa-chevron-left,
+            .fa.fa-chevron-right { 
+                @include icon-base;  color: $red-main !important;
+                @include max-600px {font-size:2em !important;}
+                @include min-600px {font-size:4em !important;}}
+        }
+        .btn-prev { left: -5px; }
+        .btn-next { right: 5px; }
+    }
+    
+    // ---------------------------------------
+    // third ul for accessibility additional infos/commands : 
+    // pictures indexes to navigate manually
+    // and check current active pic 
+    .slidenav { 
+        width:100%;
+        position: absolute; 
+        bottom:-130px;z-index: 8;
+        @include flex(row, nowrap); 
+        justify-content: space-between;
+        li button, // pic number
+        li button .commands {
+            height:3em; width: 3em;
+            font-size:1em;
+        }
+        li button .current { background-color: rgba(0, 187, 255, 0.995);}
+    }
+}
