--- a/src/sass/layouts/_lightbox.scss
+++ b/src/sass/layouts/_lightbox.scss
@@ -8,16 +8,16 @@
     background: rgba(196, 196, 196, 0.8);
     z-index:5;
 
-    .lightbox-inner-wrapper {
+    .lightbox-inner-wrapper { //contains what's around pic (btns / title/ ..)
         position: relative;
-        border: 5px solid yellow;
-        height: 900px;  
+        // border: 5px solid yellow;
+        height: 1300px;  
         margin: auto;
 
         .lightbox {
             position: relative;
-            border:5px solid red;
-            width:800px;height:600px; 
+            // border:5px solid red;
+            width:1050px;height:900px; 
             .closeLightboxBtn { 
                 position: absolute; z-index: 9;
                 @include max-600px {height:30px;width:30px; right:-50px;top:0;}
@@ -37,9 +37,10 @@
             // .slide / = li elements
             // ---------------------------------------
             .lightbox-images { // ul
+                @include border-radius(5px);
                 .slide { // li
                     width:100%;height: 100%;
-                    background-size: cover; background-position: center;
+                    background-size: cover; background-position: center; background-repeat: no-repeat;
                     position: absolute;
                     video { background-color: black; height: 100%; max-width: 100%; }
                 }
@@ -48,10 +49,11 @@
                 .slide {
                 top: 0;
                 display:block !important;
-                transition: left .6s ease-out;
+                transition: opacity .6s ease-out;
+                // transition: left .6s ease-out;
                 }  
                 .prev.slide {
-                    left: -100%;
+                    // left: -100%;
                     visibility: hidden;
                 }
                 .current.slide {
@@ -67,11 +69,13 @@
                     }
                 }
                 .next.slide {
-                    left: 100%; 
+                    // left: 100%; 
                     visibility: hidden;
                 }
             }
-            &.active:not(.current).slide h5 {display: none;} // if pic not current, hide title bottom
+            // if pic not current, hide title bottom
+            .slide:not(.current).mediaItem-title,    // li > h5
+            .slide:not(.current) > .mediaItem-title {display: none; } // li > video h5
         }
     }    
     // = second ul
@@ -107,10 +111,10 @@
         @include flex(row, nowrap); 
         justify-content: space-between;
         li button, // pic number
-        li button .commands {
+        li button .commands { // start stop
             height:3em; width: 3em;
             font-size:1em;
         }
-        li button .current { background-color: rgba(0, 187, 255, 0.995);}
+        button.current { background-color: rgba(0, 187, 255, 0.995);}
     }
 }
