--- a/src/sass/pages/_homepage.scss
+++ b/src/sass/pages/_homepage.scss
@@ -15,7 +15,8 @@ h1 {
 /* =============================================== */
 
 body  {
-    #root {  
+    #root {
+        position: relative; // for absolute positioned children
         @include max-1200px { margin: 0 20px; }
         @include min-1200px { margin: 0 35px; }
     }
