--- a/src/sass/layouts/_lightbox.scss
+++ b/src/sass/layouts/_lightbox.scss
@@ -3,7 +3,7 @@
 .lightbox-main-wrapper {
     position: absolute;
     top: 0;
-    width: 100vw; height: 100%;
+    width: 100vw;
     display: flex;
     background: rgba(196, 196, 196, 0.8);
     z-index:5;
@@ -12,7 +12,7 @@
         position: relative;
         // border: 5px solid yellow;
         height: 1300px;  
-        margin: auto;
+        margin: 10% auto;
 
         .lightbox {
             position: relative;
