--- a/src/sass/pages/_homepage.scss
+++ b/src/sass/pages/_homepage.scss
@@ -16,9 +16,8 @@ h1 {
 
 body  {
     #root {
+        height: 100vh;
         position: relative; // for absolute positioned children
-        @include max-1200px { margin: 0 20px; }
-        @include min-1200px { margin: 0 35px; }
     }
     // main contains homepage view
     .homepage-content {
