--- a/src/sass/base/_main-rules.scss
+++ b/src/sass/base/_main-rules.scss
@@ -41,4 +41,9 @@ h1,h2, h3,h4, h5, h6 { font-weight: normal;}
     width: 1px;
 }
 
+a:hover, input:hover, button:hover, select:hover,
+    a:focus, input:focus, button:focus, select:focus {
+    font-weight: bold;
+    }
+
 
