--- a/src/sass/layouts/_header.scss
+++ b/src/sass/layouts/_header.scss
@@ -23,7 +23,9 @@
             @include max-1200px{ width:150px; }
             @include min-1200px{ width:200px;margin-left:80px; }
             img { max-width: 100%;}
-        } 
+        }
+        &__logo-wrapper:focus { border: 3px solid red;}
+        
         nav-tags-component {
             // background-color: rgb(89, 97, 89);
             @include max-992px {width : 100%; } // up to 992 nav takes the whole width => goes underneath
@@ -32,6 +34,7 @@
                 height: 100%;
                 @include max-1200px{ margin:25px auto; } 
             }
+            .header__nav:focus { border: 3px solid red;}
         }
     }
 }
