DROPDOWN - bug fix - update of current sorting title on btn

--- a/src/sass/components/_dropdown.scss
+++ b/src/sass/components/_dropdown.scss
@@ -32,6 +32,8 @@
                 @include icon-base;
                 width:1.5em;
                 height:1em;
+
+                &.down { transform: rotate(180deg);} // caret points downwards when dropdown is open
             }
         }
         button, li { // select items
