--- a/src/sass/components/_picture.scss
+++ b/src/sass/components/_picture.scss
@@ -34,6 +34,10 @@
                     height:300px;
                     a video {max-height:100%;min-width:100%;}}
                 overflow: hidden;
+
+                &:focus, &:active, &:hover {
+                    border: 2px solid $red-main;
+                }
             }
             .pic-wrapper a img {
                 min-width: 100%;
@@ -67,6 +71,9 @@
                     .mediaItem-title,
                     .mediaItem-likes { font-size: 0.875em; }
                     .mediaItem-price { font-size: 0.75em; }
+                }
+                &:focus, &:active, &:hover {
+                    border: 2px solid $red-main;
                 }
             }
         }
