--- a/src/sass/components/_confirm-box.scss
+++ b/src/sass/components/_confirm-box.scss
@@ -14,6 +14,7 @@
         font-family: "DMSans-regular", Arial, sans-serif;
         font-size: 2em;
     }
+    &:focus, &:active { border: 3px solid red;}
 }
 
 
@@ -33,5 +34,9 @@
     @include border-radius(25px);
     @include box-shadow;
     h2 { text-align: center; width: 80%;}
-    .btns-wrapper {@include flex(row, nowrap); justify-content: space-evenly;}      
+    .btns-wrapper {
+        @include flex(row, nowrap); justify-content: space-evenly;
+        &:focus, &:active { border: 3px solid red;}
+    }
+    &:focus, &:active { border: 3px solid red;}    
 }
