--- a/src/sass/layouts/_lightbox.scss
+++ b/src/sass/layouts/_lightbox.scss
@@ -21,12 +21,13 @@
             .closeLightboxBtn { 
                 position: absolute; z-index: 9;
                 @include max-600px {height:30px;width:30px; right:-50px;top:0;}
-                @include min-600px {height:50px;width:50px;right:-70px;top:0;}
+                @include min-600px {height:70px;width:60px;right:-70px;top:0;}
                 .fa.fa-times { 
                     @include icon-base;  color: $red-main !important;
                     @include max-600px {font-size:2em !important;}
                     @include min-600px {font-size:4em !important;}
                 }
+                &:focus { border: 2px solid red; }
             } 
             ul {margin: 0;padding: 0; }
             
@@ -95,6 +96,7 @@
                 @include icon-base;  color: $red-main !important;
                 @include max-600px {font-size:2em !important;}
                 @include min-600px {font-size:4em !important;}}
+            &:focus { border: 2px solid red; }
         }
         .btn-prev { left: -5px; }
         .btn-next { right: 5px; }
