--- a/src/sass/layouts/_lightbox.scss
+++ b/src/sass/layouts/_lightbox.scss
@@ -117,6 +117,10 @@
             height:3em; width: 3em;
             font-size:1em;
         }
+        .commands {  
+            background-color:rgb(230, 143, 163);
+            &:active { color: red;}
+        }
         button.current { background-color: rgba(0, 187, 255, 0.995);}
     }
 }
