--- a/src/sass/layouts/_lightbox.scss
+++ b/src/sass/layouts/_lightbox.scss
@@ -17,7 +17,9 @@
         .lightbox {
             position: relative;
             // border:5px solid red;
-            width:1050px;height:900px; 
+            @include max-768px {width: 300px;height: 500px;}
+            @include min-768px {width: 500px;height: 800px;}
+            @include min-1200px {width:1050px;height:900px;}
             .closeLightboxBtn { 
                 position: absolute; z-index: 9;
                 @include max-600px {height:30px;width:30px; right:-50px;top:0;}
@@ -114,8 +116,10 @@
         justify-content: space-between;
         li button, // pic number
         li button .commands { // start stop
-            height:3em; width: 3em;
             font-size:1em;
+            @include max-768px {height:1.5em; width:1.5em;}
+            @include min-768px {height:2em; width:2em;}
+            @include min-1200px {height:3em; width: 3em;}
         }
         .commands {  
             background-color:rgb(230, 143, 163);
